# liveview-rust-example

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
resources/js/: liveview.js
src/: main.rs  socket.rs  template.rs
static/js/: main.js
templates/: app.html  base.html  hello.html
