[package]
name = "liveview"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-web-actors = "1.0"
actix = "0.8"
actix-files = "0.1"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.8"