[package]
name = "liveview-bin"
version = "0.1.0"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.4"
actix-web-actors = "4.0.0-beta.3"
actix = "0.11"
actix-files = "0.5"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.10"
live-view = "0.0.5"